# Signal-Ethereum

./: .dockerignore  .gitignore  Cargo.toml  NOTICE  README.md  justfile  license-check.py  license_check.py
.github/: CODEOWNERS
.github/actions/bininstall-risc0/: action.yml
.github/actions/sccache/: action.yml
.github/workflows/: build_guest.yml  gh-pages.yml  main.yml  mdbook.yml
book/: book.toml
chainspec/: Cargo.toml
chainspec/configs/: mainnet.yaml  sepolia.yaml
chainspec/src/: lib.rs
core/: Cargo.toml
core/src/: abi.rs  apply_block.rs  attestation.rs  attestation_inclusion.rs  attestations.rs  beacon_state.rs  bls.rs  committee_cache.rs  config.rs  consensus_state.rs  context.rs  deposit_data.rs  guest_context.rs  guest_gindices.rs  input_builder.rs  input_reader.rs  lib.rs  serde_utils.rs  shuffle_list.rs  spec.rs  state_patch.rs  state_reader.rs  threshold.rs  verify.rs
core/src/fixtures/: mainnet-transitions.json
core/src/input_reader/: guest_input_reader.rs
core/src/state_reader/: assert_state_reader.rs  host_state_reader.rs  mod.rs  preflight_state_reader.rs  ssz_state_reader.rs  state_provider.rs  test_harness_state_reader.rs  tracking_state_reader.rs
core/test_utils/: Cargo.toml
core/test_utils/src/: assert_state_reader.rs  lib.rs  test_harness_state_reader.rs
core/tests/: main.rs  sync.rs  verify.rs
docs/: 00_overview.md  01_consensus_algorithm.md  02_balance_drift.md  book.toml  safety-and-liveness.md
docs/src/: 02_balance_drift.md  SUMMARY.md
host/: Cargo.toml
host/src/: beacon_client.rs  beacon_state.rs  chain_reader.rs  conversions.rs  host_attestation_inclusion.rs  host_state_reader.rs  input_builder.rs  input_reader.rs  lib.rs  main.rs  preflight_state_reader.rs  state_patch_builder.rs  state_provider.rs  state_reader.rs  test_utils.rs
host/src/input_reader/: assert_input_reader.rs  host_input_reader.rs  preflight_input_reader.rs  test_harness_readers.rs
host/src/state_provider/: cache_provider.rs  file_provider.rs  persistant_api_provider.rs  persistant_api_state_provider.rs
host/src/state_reader/: assert_state_reader.rs  host_state_reader.rs  preflight_state_reader.rs
host/src/test_utils/: test_harness_state_reader.rs
host/tests/: sync.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: config.rs  lib.rs  main.rs
methods/src/: lib.rs
program/: Cargo.toml
program/.cargo/: config.toml
program/src/: lib.rs
script/: Cargo.toml
ssz-multiproofs/: Cargo.toml
ssz-multiproofs/src/: builder.rs  error.rs  lib.rs  multiproof.rs  tests.rs
