[workspace]
resolver = "2"
members = ["chainspec", "core", "core/test_utils", "host", "methods", "ssz-multiproofs"]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/boundless-xyz/ZKasper/"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3 # Optimize for build time and code size; use "3" for maximum runtime performance
codegen-units = 16 # Increases parallelism in code generation
debug = false # Disable debug information to speed up builds
lto = false # Link Time Optimization disabled for faster linking
panic = "unwind" # Keeps unwinding for better build speed; "abort" is faster but changes behavior
incremental = false # Disable incremental compilation for deterministic builds
overflow-checks = false # Skip overflow checks for better performance

[workspace.dependencies]
chainspec = { path = "./chainspec", default-features = false }
methods = { path = "./methods", default-features = false }
z-core = { path = "./core", default-features = false }

alloy-primitives = { version = "0.8.25" }
alloy-sol-types = { version = "0.8.25" }
bincode = { version = "1.3" }
hex = { version = "0.4" }
bytemuck = { version = "1.14" }

risc0-build = { version = "3.0.1-rc.1" }
risc0-zkvm = { version = "3.0.0-rc.1", default-features = false }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
sha2 = { version = "=0.10.8", default-features = false }
ethereum-consensus = { git = "https://github.com/gattaca-com/ethereum-consensus.git", rev = "072fb2c5abdc8585db5ea6136db561b733a56234", default-features = false }
ssz_rs = { git = "https://github.com/willemolding/ssz-rs", rev = "41c4ecd24ab9ca85ec6cae11d4227410f9363f37", default-features = false }
bitvec = { version = "1", features = ["serde"] }
tracing = "0.1.41"
anyhow = "1.0.57"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }

# Lighthouse crates
beacon_chain = { git = "https://github.com/ec2/lighthouse.git", rev = "d8a5e649e938740e2d1c8d58f6e162f0a2f7af9d" }
beacon_types = { package = "types", git = "https://github.com/ec2/lighthouse.git", rev = "d8a5e649e938740e2d1c8d58f6e162f0a2f7af9d", default-features = false, features = ["legacy-arith"] }
bls = { git = "https://github.com/ec2/lighthouse.git", rev = "d8a5e649e938740e2d1c8d58f6e162f0a2f7af9d" }
swap_or_not_shuffle = { git = "https://github.com/ec2/lighthouse.git", rev = "d8a5e649e938740e2d1c8d58f6e162f0a2f7af9d" }
safe_arith = { git = "https://github.com/ec2/lighthouse.git", rev = "d8a5e649e938740e2d1c8d58f6e162f0a2f7af9d" }

[patch."https://github.com/ralexstokes/ssz-rs"]
# Get the merkle tree empty node virtualization so non-trivial merkle trees actually fit in memory
ssz_rs = { git = "https://github.com/ec2/ssz-rs", rev = "86be2a71c2bd4d5b454a8e86b83af1effd1e14d8" }
# ssz_rs = { path = "../ssz-rs/ssz-rs" }

[patch."https://github.com/willemolding/ssz-rs"]
ssz_rs = { git = "https://github.com/ec2/ssz-rs", rev = "86be2a71c2bd4d5b454a8e86b83af1effd1e14d8" }

# [patch."https://github.com/gattaca-com/ethereum-consensus"]
# ethereum-consensus = { path = "../ethereum-consensus/ethereum-consensus" }
# beacon-api-client = { path = "../ethereum-consensus/beacon-api-client" }
