[workspace]
resolver = "2"
members = ["chainspec", "core", "host", "methods", "ssz-multiproofs"]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/boundless-xyz/The-Signal.Ethereum/"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3 # Optimize for build time and code size; use "3" for maximum runtime performance
codegen-units = 16 # Increases parallelism in code generation
debug = false # Disable debug information to speed up builds
lto = false # Link Time Optimization disabled for faster linking
panic = "unwind" # Keeps unwinding for better build speed; "abort" is faster but changes behavior
incremental = false # Disable incremental compilation for deterministic builds
overflow-checks = false # Skip overflow checks for better performance

[workspace.dependencies]
chainspec = { path = "./chainspec", default-features = false }
methods = { path = "./methods", default-features = false }
z-core = { path = "./core", default-features = false }

alloy-primitives = { version = "1.2.1" }
alloy-sol-types = { version = "1.2.1" }
bincode = { version = "1.3" }
hex = { version = "0.4" }
bytemuck = { version = "1.14" }

risc0-build = { version = "2.3.0" }
risc0-zkvm = { version = "2.3.0", default-features = false }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
sha2 = { version = "=0.10.8", default-features = false }
ethereum-consensus = { git = "https://github.com/risc0-labs/ethereum-consensus.git", rev = "b60278d73cdfc871f17e06493f707a034f3599cb", default-features = false }
ssz_rs = { git = "https://github.com/willemolding/ssz-rs", rev = "d939604c3693aadaff63dcacf9a810d8845fafef", default-features = false }
bitvec = { version = "1", features = ["serde"] }
tracing = "0.1.41"
anyhow = "1.0.57"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }

# Lighthouse crates
beacon_chain = { git = "https://github.com/risc0-labs/lighthouse.git", rev = "04b8ea4cdedac4bb0d2f61988d1dd89437a77e2e" }
beacon_types = { package = "types", git = "https://github.com/risc0-labs/lighthouse.git", rev = "04b8ea4cdedac4bb0d2f61988d1dd89437a77e2e", default-features = false, features = ["legacy-arith"] }
bls = { git = "https://github.com/risc0-labs/lighthouse.git", rev = "04b8ea4cdedac4bb0d2f61988d1dd89437a77e2e" }
swap_or_not_shuffle = { git = "https://github.com/risc0-labs/lighthouse.git", rev = "04b8ea4cdedac4bb0d2f61988d1dd89437a77e2e" }
safe_arith = { git = "https://github.com/risc0-labs/lighthouse.git", rev = "04b8ea4cdedac4bb0d2f61988d1dd89437a77e2e" }

[patch."https://github.com/ralexstokes/ssz-rs"]
# Get the merkle tree empty node virtualization so non-trivial merkle trees actually fit in memory
ssz_rs = { git = "https://github.com/willemolding/ssz-rs", rev = "d939604c3693aadaff63dcacf9a810d8845fafef" }
