[package]
name = "z-core"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
beacon_types = { workspace = true, default-features = false, features = ["legacy-arith"] }
bls = { workspace = true }
ethereum_ssz = "0.7.1"
itertools = "0.14"
safe_arith = { workspace = true }
serde = { workspace = true }
serde_arrays = { version = "0.2.0" }
serde_with = "3.13"
sha2 = { workspace = true, default-features = false }
ssz-multiproofs = { path = "../ssz-multiproofs" }
swap_or_not_shuffle = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tree_hash = { version = "0.8" }

[dev-dependencies]
arbitrary = "1.4"
beacon_types = { workspace = true, default-features = false, features = ["legacy-arith", "arbitrary"] }
bincode = { workspace = true }
rand = "0.9"
serde_json = "1.0"
