[package]
name = "host"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp"] }
anyhow = "1.0"
async-trait = "0.1"
beacon_types = { workspace = true }
bincode = { workspace = true }
chainspec = { workspace = true, features = ["mainnet", "sepolia"] }
clap = { version = "4.0", features = ["derive", "env"] }
elsa = { version = "1.11" }
ethereum-consensus = { workspace = true }
governor = "0.10"
http = "1.3"
http-cache-reqwest = "=0.15.0" # crate publishes broke semver so pin to specific version for now
methods = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4.0"
risc0-zkvm = { workspace = true, features = ["std", "unstable", "prove"] }
safe_arith = { workspace = true }
serde = "1.0"
serde_json = "1.0.133"
ssz-multiproofs = { path = "../ssz-multiproofs", features = ["builder", "progress-bar"] }
ssz_rs = { workspace = true, default-features = false, features = ["serde", "std"] }
thiserror = "2.0.6"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5" }
z-core = { path = "../core", default-features = false, features = ["host"] }
z_core_test_utils = { package = "test_utils", path = "../core/test_utils" }
