[package]
name = "host"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"

[[bin]]
name = "gen_gindices"
test = false
bench = false

[[bin]]
name = "zkasper_cli"

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp"] }
anyhow = "1.0"
async-trait = "0.1"
beacon_chain = { workspace = true }
beacon_types = { workspace = true }
bincode = { workspace = true }
bls = { workspace = true }
chainspec = { workspace = true, features = ["mainnet", "sepolia"] }
clap = { version = "4.0", features = ["derive", "env"] }
elsa = { version = "1.11" }
ethereum-consensus = { workspace = true }
ethereum_ssz = "0.9.0"
futures = { version = "0.3" }
governor = "0.10"
hex.workspace = true
http = "1.3"
http-cache-reqwest = "=0.15.0" # crate publishes broke semver so pin to specific version for now
methods = { workspace = true }
prettyplease = { version = "0.2" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
rayon = { version = "1.10.0" }
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4.0"
risc0-zkvm = { workspace = true, features = ["std", "unstable", "client", "bonsai"] }
safe_arith = { workspace = true }
serde = "1.0"
serde_json = "1.0.133"
ssz-multiproofs = { path = "../ssz-multiproofs", features = ["builder", "progress-bar"] }
ssz_rs = { workspace = true, default-features = false, features = ["serde", "std"] }
ssz_types = { version = "0.11.0" }
syn = { version = "2.0" }
thiserror = "2.0.6"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5" }
z-core = { path = "../core" }

[dev-dependencies]
arbitrary = "1.4"
beacon_types = { workspace = true, default-features = false, features = ["legacy-arith", "arbitrary"] }
bincode = { workspace = true }
chainspec = { workspace = true }
methods = { workspace = true }
rand = "0.9"
risc0-zkvm = { workspace = true, features = ["std", "unstable", "prove"] }
serde_cbor = "0.11"
state_processing = { git = "https://github.com/risc0-labs/lighthouse.git", rev = "04b8ea4cdedac4bb0d2f61988d1dd89437a77e2e" }
test-log = { version = "0.2", features = ["trace"] }
tokio = { workspace = true }
