[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
# risc0-build = { version = "^2.1.1", features = ["unstable"]}
# risc0-build = {path = "../../risc0/risc0/build", features = ["unstable"]}
risc0-build = { git = "https://github.com/risc0/risc0", branch = "main", features = ["unstable"] }

[package.metadata.risc0]
methods = ["guest"]
