[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[features]
host = [
    "dep:risc0-zkvm",
    "dep:z-core",
    "dep:anyhow",
    "dep:bincode",
    "dep:tracing",
    "dep:risc0-zkvm",
    "dep:z-core"
]
mainnet = []
testharness = []
sepolia = []

[dependencies]
anyhow = { workspace = true, optional = true  }
bincode = { workspace = true, optional = true  }
tracing = { workspace = true, optional = true  }
risc0-zkvm = { workspace = true, optional = true, features = ["client", "unstable"]  }
z-core = { workspace = true, optional = true, features = ["host"] }

[build-dependencies]
risc0-build = { workspace = true, features = ["unstable"] }

[package.metadata.risc0]
methods = ["guest"]
