[package]
name = "beacon_guest"
version = "1.0.0"
edition = "2021"

[workspace]

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
sp1-zkvm = "5.0.8"
bincode = { version = "1.3" }
blst = { version = "0.3.14", default-features = false, features = ["no-threads"] }
chainspec = { path = "../chainspec", features = ["mainnet", "sepolia"] }
serde_cbor = "0.11"
sha2 = "=0.10.8"
z-core = { path = "../core" }
