[package]
name = "beacon_guest"
version = "1.0.0"
edition = "2021"

default-run = "sepolia"

[workspace]

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
sp1-zkvm = "5.0.8"
bincode = { version = "1.3" }
blst = { version = "=0.3.14", default-features = false, features = ["no-threads", "portable"] }
chainspec = { path = "../chainspec", features = ["mainnet", "sepolia"] }
serde_cbor = "0.11"
sha2 = "=0.10.8"
z-core = { path = "../core" }
c-kzg = { version = "=2.1.1", default-features = false, features = ["portable", "no-threads"] }

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing" }
c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "c-kzg/v2.1.1-risczero.0" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-4.0.0" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
ssz_types = { git = "https://github.com/ReamLabs/ssz_types", branch = "magic-extended-list" }
