[package]
name = "ssz-multiproofs"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"

[features]
default = []
builder = ["dep:ssz_rs", "dep:ethereum-consensus", "dep:rayon", "dep:smallvec"]
progress-bar = ["dep:indicatif"]

[dependencies]
serde.workspace = true
sha2.workspace = true
alloy-primitives.workspace = true
risc0-zkvm.workspace = true
bitvec.workspace = true
thiserror = "2.0.6"
tracing.workspace = true

# Optional dependencies for builder feature
ssz_rs = { workspace = true, optional = true }
ethereum-consensus = { workspace = true, optional = true , features = ["serde"] }
rayon = { version = "1.10.0", optional = true }
indicatif = { version = "0.17.9", features = ["rayon"], optional = true }
itertools = "0.14.0"
smallvec = { version = "1.15.0", optional = true }

[dev-dependencies]
ethereum-consensus = {workspace = true, features = ["serde"] }
serde_json = "1.0.133"
anyhow.workspace = true
postcard = { version = "1.1.1", features = ["use-std"] }
