[package]
name = "test_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
beacon_chain = { workspace = true } 
beacon_types = { workspace = true } 
ethereum-consensus = { workspace = true, default-features = false }
serde = { workspace = true }
serde_json = "1.0.133"
tracing = { workspace = true }
z-core = { path = ".." }
