[package]
name = "test_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
beacon_chain = { git = "https://github.com/sigp/lighthouse.git", rev = "7759cb8f91c01a7d335469d317b5787368656064" }
beacon_types = { package = "types", git = "https://github.com/sigp/lighthouse.git", rev = "7759cb8f91c01a7d335469d317b5787368656064" }
ethereum-consensus = { workspace = true, default-features = false }
serde = { workspace = true }
serde_json = "1.0.133"
tracing = { workspace = true }
z-core = { path = ".." }
