[package]
name = "beacon_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
risc0-zkvm = { version = "3.0.0-rc.1", features = ["std", "unstable"] }
risc0-zkvm-platform = { version = "2.0.3-rc.1", features = ["sys-getenv"] }
z-core = { path = "../../core", default-features = false }
bincode = { version = "1.3" }
blst = { version = "0.3.14", default-features = false, features = ["no-threads"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "std", "fmt"] }
sha2 = "0.10.8"


[patch.crates-io]
blst = { git = "https://github.com/risc0/blst.git", tag = "v0.3.14-risczero.2" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
ethereum_hashing = { git = "https://github.com/risc0/ethereum_hashing", tag = "v0.7.0-risczero.0" }
c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "c-kzg/v1.0.3-risczero.0" }

