[package]
name = "beacon_guest"
version = "1.0.0"
edition = "2021"

[workspace]

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
bincode = { version = "1.3" }
blst = { version = "0.3.14", default-features = false, features = ["no-threads"] }
chainspec = { path = "../../chainspec", features = ["mainnet", "sepolia"] }
risc0-zkvm = { version = "2.3.0", features = ["std", "unstable"] }
serde_cbor = "0.11"
sha2 = "=0.10.8"
z-core = { path = "../../core" }

[patch.crates-io]
blst = { git = "https://github.com/risc0/blst.git", branch = "wollac/clean/v0.3.15" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
ethereum_hashing = { git = "https://github.com/boundless-xyz/ethereum_hashing", rev = "f9826065df48bab455afe6a0639d5c625ced57a2" }
c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "c-kzg/v2.1.1-risczero.0" }
